Atualização do projeto

--- a/Publico/index.html
+++ b/Publico/index.html
@@ -18,6 +18,9 @@
                         <p>Organize seu dinheiro de forma fácil.</p>
                         <p>Controle seus gastos e investimentos.</p>
                         <p>Economize para atingir suas metas.</p>
+                        <p>Detalhe importande, isso é um servidor de testes, então ele não tem um banco de dados!
+                            Ele vai manter seus registros salvos apenas na maquina cadastrada.
+                        </p>
                     </div>
                     <div class="text-center">
                         <img src="./Imagens/pocket.png" alt="CelularCarteira" class="img-fluid" srcset="">
